# python-test-report

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: calc.py  main.py
tests/: conftest.py  test_calc.py  test_conftest.py
